created non-terminal stream methods map, mapToInt, sorted