@@ -4,6 +4,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.core.config.Configurator;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -31,10 +32,29 @@ public class DepartmentsMain {
         surgicalDepartment1.addSurgeons(new Doctors("Maria", "Kuznetsova",
                 "Surgery", 3, 400));
 
+
 //        working with non-terminal stream method filter
         List<Doctors> filteredDoctors = surgicalDepartment1.returnSurgeons().stream().
-                filter(doctor -> (doctor.getDoctorsCategory() == 3)).collect(Collectors.toList());
-        departmentsLogger.info(filteredDoctors);
+                filter(doctor -> (doctor.getDoctorsCategory() == 3)).toList();
 
+//        working with non-terminal stream method map
+        List<Integer> doctorsStandardSalaryCollection = surgicalDepartment1.returnSurgeons().
+                stream().map(Doctors::getStandardSalary).toList();
+
+//        working with non-terminal stream method mapToInt
+        double avgStandardSalary = surgicalDepartment1.returnSurgeons().
+                stream().mapToInt(Doctors::getStandardSalary).average().getAsDouble();
+
+//        working with non-terminal stream method sorted
+        List<Doctors> sortedDoctors =  surgicalDepartment1.returnSurgeons().
+                stream().sorted(Comparator.comparingInt(Doctors::getDoctorsCategory)).toList();
+
+
+//        logger output
+        departmentsLogger.info(
+                "\nworking with non-terminal stream method filter\n" + filteredDoctors +
+                "\n\nworking with non-terminal stream method map\n" + doctorsStandardSalaryCollection +
+                "\n\nworking with non-terminal stream method mapToInt\n" + avgStandardSalary +
+                "\n\nworking with non-terminal stream method sorted\n" + sortedDoctors);
     }
 }
